Net add coverage

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -345,7 +345,9 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 _Image: Drop and recovery of DCR locked in PoS._
 
-{ _Recap of ticket price action, mention ticket pool vs target._ }
+A sharp drop in ticket buying volume has sent the ticket price down to 140 DCR, this level was last observed in October 2022 during a similar drop. The amount of DCR locked in tickets reduced by ~780K DCR to 8.93 million DCR.
+
+Such low ticket price has triggered very high ticket buying which has sent ticket price to the wildest price swing we have seen so far. 48,624 tickets have been bought in January - the [highest monthly](https://dcrdata.decred.org/months?rows=100) since the very first month of Decred, February 2016.
 
 **VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~8,390 (+1,270) live tickets, which was 18.8% of the ticket pool (+1.6%) as of Feb 1. At the time of the snapshot the ticked pool had ~44,670 tickets, a whopping 9% above the [target](https://docs.decred.org/proof-of-stake/overview/) 40,960.
 
@@ -359,9 +361,9 @@ _Image: Distribution of tickets managed by VSPs._
 
 ![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Daily_NodeDistribution.png) { upload }
 
-_Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. NOTE: Data between {} and {} was incorrect._
+_Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. NOTE: Data until Jan 2023 was incomplete._
 
-{ explain our incorrect data in few past months }
+We have discovered that the node counts we have been reporting since [June 2022](202206.md) were incomplete. A possible cause for this is that Decred Mapper was relying on the `GetAddr` request, and many nodes stopped responding to that request for some reason. `GetAddr` is part of the network gossip protocol, it is how nodes discover other nodes. Responding to it is optional, so getting no response is not a bug. Node counts reported by Decred Mapper were correct on Jan 26.
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 59.9-61.6%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 140-611K DCR.
 
