--- a/journal/202301.md
+++ b/journal/202301.md
@@ -399,16 +399,15 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
-Monde PR’s achievements: 
+Monde PR's achievements: 
 
-- Pitched two commentary opportunities 
-- Pitched four media opportunities 
+- Pitched 2 commentary opportunities 
+- Pitched 4 media opportunities 
 
 Secured the following media placements:
 
-- @jy-p was  interviewed on CryptoSlate's [SlateCast podcast](https://cryptoslate.com/podcasts/combining-proof-of-work-and-proof-of-stake-for-a-decentralized-financial-system-with-decred/), talking about Decred's approach to censorship and privacy, the project treasury and hybrid consensus model. 
-- An article in [Decred Magazine](https://www.decredmagazine.com/defi-needs-to-be-decentralized-beyond-name/) featuring commentary from @jz on how DeFi needs to be decentralized beyond name 
-
+- @jy-p was interviewed on CryptoSlate's [SlateCast podcast](https://cryptoslate.com/podcasts/combining-proof-of-work-and-proof-of-stake-for-a-decentralized-financial-system-with-decred/), talking about Decred's approach to censorship and privacy, the project treasury and hybrid consensus model.
+- An article in [Decred Magazine](https://www.decredmagazine.com/defi-needs-to-be-decentralized-beyond-name/) featuring commentary from @jz on how DeFi needs to be decentralized beyond name.
 
 
 ## Events
