--- a/journal/202301.md
+++ b/journal/202301.md
@@ -416,7 +416,7 @@ Secured the following media placements:
 
 **Attended:**
 
-- {}
+- @arij was invited to DevFest organized by Google Developer Group of Settat and Women Techmakers Settat-Marrakech. She talked about the Power of the Blockchain and Decred as an example, and the importance of using own wallets and not centralized exchanges. Most of the audience was developers and computer sciense students, some asked questions about how to work for Decred or do internships. See more details in the [report](https://decredcommunity.github.io/events/index/20230107.1).
 
 **Upcoming:**
 
