Media add DM stats

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -428,7 +428,17 @@ Secured the following media placements:
 - [Decred’s Bison Relay helps users monetize all types of content](https://www.decredmagazine.com/decreds-bison-relay-helps-users-monetize-all-types-of-content/) by @HassanMaishera
 - [Decred a year in review (2022)](https://www.decredmagazine.com/decred-a-year-in-review-2022/) by @phoenixgreen
 
-{ DM stats }
+[Decred Magazine](https://www.decredmagazine.com/) engagement stats as of January 2023:
+
+- Total number of articles on DM: 392
+- Newsletter subscribers: 87
+- New DM Posts and newsletters sent: 21
+- Active social media campaigns: 26
+- Completed social media campaigns: 31
+- Social media posts: 132
+- Likes: 704
+- Re-tweets: 129
+- Social media followers across all platforms and accounts: 1,180
 
 Trivia: Decred Magazine mirrors [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/), has an [RSS feed](https://www.decredmagazine.com/rss/), and an [Instagram account](https://instagram.com/decredmagazine).
 
