--- a/journal/202301.md
+++ b/journal/202301.md
@@ -421,11 +421,11 @@ Secured the following media placements:
 
 **Selected articles:**
 
-- [Decred Launches Bison Relay: A Private, Censorship-Resistant Social Media and Messaging Platform](https://decred.org/news/2022-12-15-decred-launches-bison-relay/)
+- [Decred lunches Bison Relay: A private, censorship-resistant social media and messaging platform](https://decred.org/news/2022-12-15-decred-launches-bison-relay/) (press release at decred.org)
 - [Future is here? A talk with OpenAI about the crypto market](https://www.decredmagazine.com/future-is-here-a-talk-with-openai-about-the-crypto-market/) by @Joao
-- [Personal Private Server Umbrel](https://www.decredmagazine.com/personal-private-server-umbrel/) by @phoenixgreen
+- [Personal private server Umbrel](https://www.decredmagazine.com/personal-private-server-umbrel/) by @phoenixgreen
 - [Decred vs Monero: Clash of privacy coins](https://www.decredmagazine.com/decred-vs-monero-clash-of-privacy-coins/) by @Joao
-- [Decred’s Bison Relay helps users monetize all types of content](https://www.decredmagazine.com/decreds-bison-relay-helps-users-monetize-all-types-of-content/) by @HassanMaishera
+- [Decred's Bison Relay helps users monetize all types of content](https://www.decredmagazine.com/decreds-bison-relay-helps-users-monetize-all-types-of-content/) by @HassanMaishera
 - [Decred a year in review (2022)](https://www.decredmagazine.com/decred-a-year-in-review-2022/) by @phoenixgreen
 
 [Decred Magazine](https://www.decredmagazine.com/) engagement stats as of January 2023:
@@ -444,9 +444,9 @@ There are many ways to follow Decred Magazine: [Twitter](https://twitter.com/dec
 
 **Videos:**
 
-- [Bison Relay 0.1 News Feed - Connecting, creating and using markdown](https://www.youtube.com/watch?v=NuKVAp4fIBY) by @phoenixgreen
-- [Built-in Payment System - Bison Relay](https://www.youtube.com/watch?v=aZvnd5BvEBs) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/built-in-payment-system-bison-relay/)
-- [Bison Relay - Manage Content](https://www.youtube.com/watch?v=1gNc_DLCddc) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/bison-relay-manage-content/)
+- [Bison Relay 0.1 news feed - connecting, creating and using markdown](https://www.youtube.com/watch?v=NuKVAp4fIBY) by @phoenixgreen
+- [Built-in payment system - Bison Relay](https://www.youtube.com/watch?v=aZvnd5BvEBs) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/built-in-payment-system-bison-relay/)
+- [Bison Relay - Manage content](https://www.youtube.com/watch?v=1gNc_DLCddc) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/bison-relay-manage-content/)
 - [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://www.youtube.com/watch?v=VYDPCbb5VhE) by CryptoSlate feat @jy-p
 - [Bison Relay updates to version 0.1.3](https://www.youtube.com/watch?v=EWNW91_rp1w) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/bison-relay-updates-to-version-0-1-3/)
 
@@ -454,11 +454,11 @@ There are many ways to follow Decred Magazine: [Twitter](https://twitter.com/dec
 
 Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Spaces:
 
-- [2023: The Year of the Privacy Coin?](https://twitter.com/i/spaces/1YqKDobzqoOxV) feat. Monero community members (also on [Anchor](https://anchor.fm/decred-magazine/episodes/2023-The-Year-of-the-Privacy-Coin-e1t4mst) + an edited version on [YouTube](https://www.youtube.com/watch?v=5ttufSLhsE0))
-- [Privacy Tools for a Sovereign Age](https://twitter.com/i/spaces/1jMJgLyXXEyxL) feat. Decred and Monery community members ([Anchor](https://anchor.fm/decred-magazine/episodes/Privacy-Tools-for-a-Sovereign-Age---Decred-Twitter-Space-e1tf0g9))
-- [5 Proposals Up General Discussion](https://twitter.com/i/spaces/1YpKkgeoVqwKj) - speaking with proposal submitters and the community about the latest batch of proposals. ([Anchor](https://anchor.fm/decred-magazine/episodes/Decred-Twitter-Space-5-Proposals-Up-General-Discussion-hosted-by-WasPraxis-e1tpati))
-- [Why Privacy is Critical for a Fully Functional Currency](https://twitter.com/i/spaces/1YqJDoDNrnzGV) feat. Firo Co-Founder [Reuben Yap](https://twitter.com/reubenyap) ([Anchor](https://anchor.fm/decred-magazine/episodes/Why-Privacy-is-Critical-for-a-Fully-Functional-Currency---Decred--Firo-Twitter-Space-e1u52o8))
-- [DCR Proposals Space](https://twitter.com/i/spaces/1jMKgLAlLXgGL) - second chat with proposal owners to discuss their aims and outcomes. ([Anchor](https://anchor.fm/decred-magazine/episodes/DCR-Proposals-Space-e1u9f9j))
+- [2023: The year of the privacy coin?](https://twitter.com/i/spaces/1YqKDobzqoOxV) feat. Monero community members (also on [Anchor](https://anchor.fm/decred-magazine/episodes/2023-The-Year-of-the-Privacy-Coin-e1t4mst) + an edited version on [YouTube](https://www.youtube.com/watch?v=5ttufSLhsE0))
+- [Privacy tools for a sovereign age](https://twitter.com/i/spaces/1jMJgLyXXEyxL) feat. Decred and Monery community members ([Anchor](https://anchor.fm/decred-magazine/episodes/Privacy-Tools-for-a-Sovereign-Age---Decred-Twitter-Space-e1tf0g9))
+- [5 proposals up - general discussion](https://twitter.com/i/spaces/1YpKkgeoVqwKj) - speaking with proposal submitters and the community about the latest batch of proposals. ([Anchor](https://anchor.fm/decred-magazine/episodes/Decred-Twitter-Space-5-Proposals-Up-General-Discussion-hosted-by-WasPraxis-e1tpati))
+- [Why privacy is critical for a fully functional currency](https://twitter.com/i/spaces/1YqJDoDNrnzGV) feat. Firo Co-Founder [Reuben Yap](https://twitter.com/reubenyap) ([Anchor](https://anchor.fm/decred-magazine/episodes/Why-Privacy-is-Critical-for-a-Fully-Functional-Currency---Decred--Firo-Twitter-Space-e1u52o8))
+- [DCR proposals space](https://twitter.com/i/spaces/1jMKgLAlLXgGL) - second chat with proposal owners to discuss their aims and outcomes. ([Anchor](https://anchor.fm/decred-magazine/episodes/DCR-Proposals-Space-e1u9f9j))
 
 **Art and fun:**
 
@@ -473,13 +473,13 @@ Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Sp
 **Translations:**
 
 - Decred Journal November-December got a total of 3 new [translations](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic) and Polish (@kozel). Thank you all for spreading the word!
-- [Bison Relay: The Sovereign Internet](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/) was translated to [Chinese](https://github.com/DominicTing/decred-ZH-translations/blob/master/Bison%20Relay:%20The%20Sovereign%20Internet.md) by @Dominic ([tweet](https://twitter.com/wanbihou/status/1604010848745230336))
+- [Bison Relay: The sovereign Internet](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/) was translated to [Chinese](https://github.com/DominicTing/decred-ZH-translations/blob/master/Bison%20Relay:%20The%20Sovereign%20Internet.md) by @Dominic ([tweet](https://twitter.com/wanbihou/status/1604010848745230336))
 
 **Discussions**:
 
-- [DiscussionCan anything surpass bitcoin as the main store of value crypto?](https://www.reddit.com/r/decred/comments/103dkbu/can_anything_surpass_bitcoin_as_the_main_store_of/)
+- [Can anything surpass bitcoin as the main store of value crypto?](https://www.reddit.com/r/decred/comments/103dkbu/can_anything_surpass_bitcoin_as_the_main_store_of/)
 - [Brainstorming an idea for DCR paper notes](https://www.reddit.com/r/decred/comments/10m8y6r/decred_notes_idea/)
-- [Why RBF (Replace By Fee) is worse than CPFP (Child Pays For Parent)](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$0a-UUBBdWAG0y7spLPr5TD42Q__uSV_mEbnEbAs9wtQ?via=decred.org&via=matrix.org&via=planetdecred.org). TL;DR RBF allows double spends and only the sender can accelerate a low-fee transaction. CPFP does not allow double spends and allows both sender and recipient to speed up the tx.
+- [Why CPFP is better than RBF CPFP](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$0a-UUBBdWAG0y7spLPr5TD42Q__uSV_mEbnEbAs9wtQ?via=decred.org&via=matrix.org&via=planetdecred.org). TL;DR RBF (Replace By Fee) opens the door for double spends, and only the sender can accelerate a low-fee transaction. CPFP (Child Pays For Parent) does not allow double spends and allows both sender and recipient to speed up the tx.
 
 
 ## Markets
