--- a/journal/202301.md
+++ b/journal/202301.md
@@ -440,7 +440,7 @@ Secured the following media placements:
 - Re-tweets: 129
 - Social media followers across all platforms and accounts: 1,180
 
-Please note that Decred Magazine generates much more content than [@decredproject](https://twitter.com/decredproject) can retweet (a nice problem to have!), so follow it directly to not miss a story. There are many ways to follow DM: [Twitter](https://twitter.com/decredmagazine), [Instagram](https://instagram.com/decredmagazine), [RSS feed](https://www.decredmagazine.com/rss/), or just directly check [decredmagazine.com](https://www.decredmagazine.com/) or a specific category, [News](https://www.decredmagazine.com/tag/news/) or [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/).
+Please note that Decred Magazine generates much more content than [@decredproject](https://twitter.com/decredproject) can retweet (a nice problem to have!), so follow it directly to not miss a story. There are many ways to follow DM: [Twitter](https://twitter.com/decredmagazine), [Instagram](https://instagram.com/decredmagazine), [Facebook](https://www.facebook.com/Decredmagazine), [RSS feed](https://www.decredmagazine.com/rss/), or just directly check [decredmagazine.com](https://www.decredmagazine.com/) or a specific category, [News](https://www.decredmagazine.com/tag/news/) or [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/).
 
 **Videos:**
 
