--- a/journal/202301.md
+++ b/journal/202301.md
@@ -500,21 +500,21 @@ _Image: DCRDEX monthly volume in USD._
 
 ## Relevant External
 
-The Ordinals protocol, for "inscribing" data on a Satoshsi like a Bitcoin version of an NFT, debuted this month and [received](https://www.coindesk.com/tech/2023/01/31/bitcoin-community-erupts-in-existential-debate-over-nft-project-ordinals/) a mixed reaction from the Bitcoin community. Reactions were split between those who viewed it as an additional fun use case for Bitcoin, and those who saw it as spam invading the Bitcoin chain which should be discouraged or even censored. Adam back was among those who immediately started thinking of ways that mining pools could mobilise to censor and prevent this use of Bitcoin, although later deleted and [retracted](https://twitter.com/adam3us/status/1620005172058669056) the tweet. 
+The Ordinals protocol, for "inscribing" data on satoshis like a Bitcoin version of an NFT, debuted this month and [received](https://www.coindesk.com/tech/2023/01/31/bitcoin-community-erupts-in-existential-debate-over-nft-project-ordinals/) a mixed reaction from the Bitcoin community. Reactions were split between those who viewed it as an additional fun use case for Bitcoin, and those who saw it as spam invading the Bitcoin chain which should be discouraged or even censored. Adam Back was among those who immediately started thinking of ways that mining pools could mobilise to censor and prevent this use of Bitcoin, although later deleted and [retracted](https://twitter.com/adam3us/status/1620005172058669056) the tweet.
 
-In early Feb the largest ever Bitcoin transaction was [mined](https://www.coindesk.com/tech/2023/02/02/giant-bitcoin-taproot-wizard-nft-minted-in-collaboration-with-luxor-mining-pool/) and it was a "Taproot Wizard" Ordinal inscription, filling an entire block almost to the 4mb limit. The transaction was mined by Luxor pool and paid for in a private arrangement with Udi Wertheimer, one of the Taproot Wizards. Ordinals rely on Taproot and also Segwit to work in their specific form on the Bitcoin chain, and they have some structural differences to how NFTs work on Ethereum and other chains. 
+In early Feb the largest ever Bitcoin transaction was [mined](https://www.coindesk.com/tech/2023/02/02/giant-bitcoin-taproot-wizard-nft-minted-in-collaboration-with-luxor-mining-pool/) and it was a "Taproot Wizard" Ordinal inscription, filling an entire block almost to the 4 megabyte limit. The transaction was mined by Luxor pool and paid for in a private arrangement with Udi Wertheimer, one of the Taproot Wizards. Ordinals rely on Taproot and also SegWit to work in their specific form on the Bitcoin chain, and they have some structural differences to how NFTs work on Ethereum and other chains.
 
-Taproot itself has been [billed](https://www.coindesk.com/layer2/privacyweek/2022/01/24/bitcoin-isnt-private-but-its-recent-taproot-upgrade-will-help/) as a privacy upgrade for Bitcoin, because it allows complex transactions, like those requiring multi-signature authorisation or using time locks, to appear similar to normal transactions, in a way which does not reveal their nature. Taproot also allows some of these operations to be completed more efficiently, which means paying less for block space. Although Taproot has been live since a soft fork activated in November 2021, its usage [remained low](https://cryptonews.com/exclusives/taproot-adoption-remains-low-but-devs-say-it-isnt-problem-for-bitcoin.htm) until recently, with only 0.37% of transactions using it in April 
+[Taproot](https://bitcoinops.org/en/topics/taproot/) itself has been [billed](https://www.coindesk.com/layer2/privacyweek/2022/01/24/bitcoin-isnt-private-but-its-recent-taproot-upgrade-will-help/) as a privacy upgrade for Bitcoin, because it allows complex transactions, like those requiring multi-signature authorization or using time locks, to appear similar to normal transactions, in a way which does not reveal their nature. Taproot also allows some of these operations to be completed more efficiently, which means paying less for block space. Although Taproot has been live since a soft fork activated in November 2021, its usage [remained low](https://cryptonews.com/exclusives/taproot-adoption-remains-low-but-devs-say-it-isnt-problem-for-bitcoin.htm) until recently, with only 0.37% of transactions using it in April 2022.
 
 Polkadot is planning to [transform](https://polkadot.network/blog/lets-talk-polkadot-opengov-part-i) its governance, aiming to improve the level of decentralization and community participation. Presently a Council is elected by token holders and appoints a Technical Committee of protocol experts, these bodies serve pivotal roles in Polkadot's governance. The new system will dissolve the Council and Committee roles. Some of their functions will be performed by community members directly, proposals will be submitted to different tracks depending on what they do, and the tracks will have their own approval thresholds and time frames, with an automated process to determine when voting starts and stops and which proposals are activated first. A "Substrate Fellowship" will take on the responsibility for assuring code quality for upgrades, but at 100+ members this will be a much larger group than the Technical Committee. The new governance system will also enable more flexible delegation of voting power, on a per proposal type basis.
 
 Polkadot's Web3 Foundation has [tweeted](https://twitter.com/Web3foundation/status/1618550186166620161) out its argument for why the DOT token is no longer a security, [explaining](https://cointelegraph.com/news/polkadot-restates-its-case-that-dot-has-morphed-away-from-security-status) the efforts they have taken to comply with US securities laws and announcing in Nov 2022 that DOT was able to morph into something which was no longer a security.
 
-It looks like Ooki DAO is [set](https://cointelegraph.com/news/ooki-dao-misses-lawsuit-response-deadline-default-judgment-on-the-cards) to lose its case with the CFTC in a default judgment because nobody stepped up to represent the DAO by the deadline of Jan 11. So far CFTC has established that it can [serve](https://cointelegraph.com/news/judge-orders-cftc-to-serve-ooki-dao-founders-with-lawsuit) a DAO papers by posting it on their forum/discord as long as they identify and serve at least one tokenholder as well, and has indicated that it considers anyone who participates in the DAO in any way to be jointly liable for its actions as an unincorporated partnership.
+It looks like Ooki DAO is [set](https://cointelegraph.com/news/ooki-dao-misses-lawsuit-response-deadline-default-judgment-on-the-cards) to lose its case with the CFTC in a default judgment because nobody stepped up to represent the DAO by the deadline of Jan 11. So far CFTC has established that it can [serve](https://cointelegraph.com/news/judge-orders-cftc-to-serve-ooki-dao-founders-with-lawsuit) a DAO papers by posting it on their forum/Discord as long as they identify and serve at least one tokenholder as well, and has indicated that it considers anyone who participates in the DAO in any way to be jointly liable for its actions as an unincorporated partnership.
 
-The SEC has [piled](https://www.sec.gov/news/press-release/2023-13) on to Avi Eisenberg adding its own Mango market manipulation charges to those brought by the DoJ and CFTC already.  As of early Feb Eisenberg was [trying](https://www.coindesk.com/policy/2023/02/02/alleged-mango-markets-exploiter-eisenberg-waives-bail-in-first-ny-court-hearing/) to negotiate bail, having been in custody since Dec 26. 
+The SEC has [piled](https://www.sec.gov/news/press-release/2023-13) on to Avi Eisenberg adding its own Mango market manipulation charges to those brought by the DoJ and CFTC already. As of early Feb Eisenberg was [trying](https://www.coindesk.com/policy/2023/02/02/alleged-mango-markets-exploiter-eisenberg-waives-bail-in-first-ny-court-hearing/) to negotiate bail, having been in custody since Dec 26.
 
-The infamous 3AC co-founders are [attempting](https://vulcanpost.com/814224/three-arrows-capital-seeks-funding-gtx-fill-ftx-void/) a rebirth from the ashes of FTX, seeking funding to set up a company for trading the claims that crypto traders have on bankrupt exchange liquidations. 
+The infamous 3AC co-founders are [attempting](https://vulcanpost.com/814224/three-arrows-capital-seeks-funding-gtx-fill-ftx-void/) a rebirth from the ashes of FTX, seeking funding to set up a company for trading the claims that crypto traders have on bankrupt exchange liquidations.
 
 DeFi platform Moonwell on the Moonbeam chain has been [figuring](https://forum.moonwell.fi/t/explanation-of-methodology-to-calculate-the-impact-of-mip-14-on-moonwell-users/351) out how to compensate its users after a voter-approved parameter change caused all the collateral on the platform to lose 99.9% of its borrowing power and everyone got liquidated, paying 10% of their position size in penalties. 30% of the liquidation penalties went to a community fund and a proposal will be made to reimburse that portion directly, the other 70% will be covered by Gauntlet, a risk management [partner](https://medium.com/gauntlet-networks/gauntlet-and-moonwell-partner-to-offer-dynamic-risk-management-259856b6146c) of Moonwell.
 
@@ -528,11 +528,11 @@ Uniswap's governance has turned into a [clash](https://www.theblock.co/post/2072
 
 Silvergate Capital is the bank which many crypto exchanges use, and its stock has [plunged](https://www.coindesk.com/business/2023/01/05/silvergate-cuts-40-jobs-writes-off-diem-asset-acquisition/) by 46% after it reported outflows of $8.1 billion in crypto assets in Q2 2022, and cut 40% of its staff (about 200 employees) to cut costs. Silvergate was viewed as a possible casualty from the FTX/Genesis contagion, spurring the run of withdrawals. Silvergate also announced that it was writing off all $196 million of its investment in Diem (formerly Facebook Libra/Zuck Bucks), having apparently realised that open source code and a tarnished brand wasn't worth much.
 
-Aptos, which is led by former Diem developers but didn't pay Meta/Silvergate anything for their assets and instead [took](https://siliconangle.com/2022/03/15/aptos-raises-200m-bring-diem-blockchain-back-life/) $200M funding from a16z and other VCs, saw a surge in its price in January which took its market cap to $2.4B, as it became the "[hot new coin](https://finance.yahoo.com/news/crypto-market-january-roundup-aptos-224447055.html)" for a period. 
+Aptos, which is led by former Diem developers but didn't pay Meta/Silvergate anything for their assets and instead [took](https://siliconangle.com/2022/03/15/aptos-raises-200m-bring-diem-blockchain-back-life/) $200M funding from a16z and other VCs, saw a surge in its price in January which took its market cap to $2.4B, as it became the "[hot new coin](https://finance.yahoo.com/news/crypto-market-january-roundup-aptos-224447055.html)" for a period.
 
-Well known Bitcoin developer lukedashjr was [hacked](https://twitter.com/peterktodd/status/1609655629903265795) and lost a considerable proportion of his BTC stack, over 200 BTC. It appears that hackers were able to compromise the Linux system being used, which granted access to lukedashjr's PGP encryption keys as well as his BTC. The PGP keys were used to sign Bitcoin Core and Knots releases, so these should be distrusted by users until the situation is resolved and lukedashjr presumably publishes a new PGP key.
+Well known Bitcoin developer [Luke Dashjr](https://twitter.com/LukeDashjr) was [hacked](https://twitter.com/peterktodd/status/1609655629903265795) and lost a considerable proportion of his BTC stack, over 200 BTC. It appears that hackers were able to compromise the Linux system being used, which granted access to Luke's PGP encryption keys as well as his BTC. The PGP keys were used to sign Bitcoin Core and Knots releases, so these should be distrusted by users until the situation is resolved and Luke Dashjr presumably publishes a new PGP key.
 
-Youtube personality Logan Paul's role in the CryptoZoo NFT project was [documented](https://www.vulture.com/2023/01/logan-paul-cryptozoo-scam-coffeezilla-allegations-explained.html) by Coffeezilla, with the conclusion that he was chief among scammers for a project which over-hyped a game that they were not realistically going to deliver. Paul threatened to sue CoffeeZilla but then [withdrew](https://cointelegraph.com/news/logan-paul-backflips-on-defamation-lawsuit-against-coffeezilla-apologizes) those threats and apologized. Logan Paul is now the [subject](https://www.sportskeeda.com/esports/news-coffeezilla-reveals-class-action-lawsuit-filed-logan-paul-role-cryptozoo) of a class action lawsuit over his role in CryptoZoo.
+YouTube personality Logan Paul's role in the CryptoZoo NFT project was [documented](https://www.vulture.com/2023/01/logan-paul-cryptozoo-scam-coffeezilla-allegations-explained.html) by Coffeezilla, with the conclusion that he was chief among scammers for a project which over-hyped a game that they were not realistically going to deliver. Paul threatened to sue CoffeeZilla but then [withdrew](https://cointelegraph.com/news/logan-paul-backflips-on-defamation-lawsuit-against-coffeezilla-apologizes) those threats and apologized. Logan Paul is now the [subject](https://www.sportskeeda.com/esports/news-coffeezilla-reveals-class-action-lawsuit-filed-logan-paul-role-cryptozoo) of a class action lawsuit over his role in CryptoZoo.
 
 Vitalik Buterin has [published](https://vitalik.ca/general/2023/01/20/stealth.html) a blog post about stealth addresses, describing privacy as one of the largest remaining challenges in the Ethereum ecosystem. Stealth addresses would be generated by the sender from a recipient's meta-address, which only the recipient could control but which would not be associated with their on chain identity. In other words it would give the same kind of privacy as generating a new address for each receipt of assets, but without the hassle of having to generate the new addresses.
 
