Credits add people

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -548,6 +548,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: {}
-- title image: {}
+- reviews and feedback: { davecgh, jholdstock }
+- title image: { OfficialCryptos }
 - funding: Decred stakeholders
