--- a/journal/202301.md
+++ b/journal/202301.md
@@ -12,7 +12,7 @@ Highlights for January: { _no links here, 5-7 bullets max._
 
 - BR "quality of life" release v0.1.3
 
-- 
+- 8 proposals batch
 
 - 
 
@@ -28,16 +28,15 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 - [Outreach](#outreach)
 - [Events](#events)
 - [Media](#media)
-- [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
 
 ## Bison Relay v0.1.3
 
-{ highlights, incl. AppImage build, link to YT overview vid }
+New [v0.1.3 release](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.3) has brought many bug fixes and quality of life improvements discovered during early community testing. AppImage builds are now available for Linux. Get the latest release at the new [bisonrelay.org/download](https://bisonrelay.org/download/) page.
 
-https://bisonrelay.org/download/
+Head to the [Bison Relay](#bison-relay) section for a detailed list of changes in v0.1.3 and beyond.
 
 
 ## Development
@@ -181,8 +180,6 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 ### Bison Relay
 
 _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new peer-to-peer social media platform with strong protections against censorship, surveillance, and advertising, powered by Decred Lightning Network._
-
-New [v0.1.3 release](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.3) has brought many bug fixes and quality of life improvements discovered during early community testing.
 
 v0.1.3 GUI changes:
 
