Drop a few more hints

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -4,17 +4,15 @@
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-Highlights for January: { _no links here, 5-7 bullets max._
+Highlights for January: {
 
 - Timestamply remake
 
-- Proposals (spawn own Highlights bullets as needed)
+- 8 Proposals batch (spawn own Highlights bullets as needed)
 
 - BR "quality of life" release v0.1.3
 
-- 8 proposals batch
-
-- 
+- any else?
 
 }
 
@@ -382,8 +380,6 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 
 ## Outreach
-
-{ _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
 Monde PR's achievements: 
 
