--- a/journal/202301.md
+++ b/journal/202301.md
@@ -6,11 +6,11 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 Highlights for January: {
 
-- Timestamply remake
+- A remake of the Timestamply site to facilitating timestamping on the DCR chain has been approved for funding and is already available to test.
 
-- 8 Proposals batch (spawn own Highlights bullets as needed)
+- 8 Proposals were published on Politeia and by publication time voting has concluded for all of them, 5 were approved and 3 rejected.
 
-- BR "quality of life" release v0.1.3
+- Bison Relay received a "quality of life" update with many fixed and improvements, v0.1.3.
 
 - any else?
 
