Intro, ToC, Ann nits

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -4,20 +4,17 @@
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-Highlights for January: {
+Highlights for January:
 
 - A remake of the Timestamply site to facilitating timestamping on the DCR chain has been approved for funding and is already available to test.
 
-- 8 Proposals were published on Politeia and by publication time voting has concluded for all of them, 5 were approved and 3 rejected.
+- 8 proposals were published on Politeia and by publication time voting has concluded for all of them, 5 were approved and 3 rejected.
 
-- Bison Relay received a "quality of life" update with many fixed and improvements, v0.1.3.
+- Bison Relay received a quality of life update with many fixes and improvements, v0.1.3.
 
-- any else?
+Contents:
 
-}
-
-Contents: { _Sync ToC at the very end, when all text is finished_ }
-
+- [Bison Relay v0.1.3](#bison-relay-v013)
 - [Development](#development)
 - [People](#people)
 - [Governance](#governance)
@@ -32,7 +29,9 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 ## Bison Relay v0.1.3
 
-New [v0.1.3 release](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.3) has brought many bug fixes and quality of life improvements discovered during early community testing. AppImage builds are now available for Linux. Get the latest release at the new [bisonrelay.org/download](https://bisonrelay.org/download/) page.
+New [v0.1.3 release](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.3) has brought many bug fixes and quality of life improvements discovered during early community testing. AppImage builds are now available for Linux users.
+
+Get the latest release at the new [download selector](https://bisonrelay.org/download/) or directly from [GitHub](https://github.com/companyzero/bisonrelay/releases).
 
 Head to the [Bison Relay](#bison-relay) section for a detailed list of changes in v0.1.3 and beyond.
 
