--- a/journal/202301.md
+++ b/journal/202301.md
@@ -49,8 +49,6 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 - Updated the [Docker image](https://github.com/decred/dcrd/pull/3043) to newer versions of Go and Alpine Linux.
 - Configured the Docker container to [forward SIGTERM signal](https://github.com/decred/dcrd/pull/3044) to the running dcrd instance so it shuts down gracefully when a container is stopped.
 - Improved and extended [Docker documentation](https://github.com/decred/dcrd/pull/3045).
-- Updated JSON-RPC [API docs](https://github.com/decred/dcrd/pull/3046) to remove usages of the deprecated `ioutil` package. { _minor, merge_ }
-- Added a [missing break](https://github.com/decred/dcrd/pull/3047) after selecting a random address from the Address Manager. {_minor, merge into bullet below_ }
 - Optimized selection of peers in the address manager to mitigate [high CPU use](https://github.com/decred/dcrd/pull/3047) discovered by testing the DEX with an SPV DCR wallet.
 
 
@@ -79,11 +77,9 @@ Other changes:
 
 - Refactored the high-level Politeia app to use the new [toolkit](https://github.com/decred/politeiagui/pull/2881) for wiring the plugins together.
 - Added [validation](https://github.com/decred/politeiagui/pull/2889) to all forms on Politeia, including error messages, and form submission control.
-- ~3 fixes { 2888 x2, 2890 } and { 475, 476 } fixes in the pi-ui library.
+- ~5 other fixes in the GUI and the pi-ui library.
 
-{ image candidates: 2884 2887 }
-
-![](https://user-images.githubusercontent.com/22639213/209404782-5b954537-7ce2-4169-b95d-a744182c9b10.png) { upload }
+![](https://user-images.githubusercontent.com/22639213/209404782-5b954537-7ce2-4169-b95d-a744182c9b10.png) { upload 2884.1 }
 
 _Image: User account page in the Politeia GUI remake._
 
