--- a/journal/202301.md
+++ b/journal/202301.md
@@ -232,7 +232,7 @@ _[Timestamply](https://github.com/decred/dcrtimegui) is a free service for times
 
 dcrtimegui was rebranded as Timestamply and the app received a [full redesign](https://github.com/decred/dcrtimegui/pull/151). Some of the new features include:
 
-- New graphical design by matching Decred design standards developed for Decrediton, Politeia and decred.org remake.
+- New graphical design matching Decred design standards developed for Decrediton, Politeia and the last decred.org update.
 - Light and dark modes.
 - Multiple languages, including initial Portuguese translation.
 - Separate Timestamp and Verify pages.
@@ -272,7 +272,7 @@ Community stats as of Feb 2 (compared to Jan 4):
 
 In January the new [treasury](https://dcrdata.decred.org/treasury) received 8,564 DCR worth $189K at January's average rate of $22.05.
 
-The [treasury spend tx](https://dcrdata.decred.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) mined on Jan 3 had 24 outputs and was reported last month as making payments to contractors for (mostly) the November invoices, ranging from 5 DCR to 1,270 DCR. It was approved by 6,967 votes (all Yes) with voter turnout of 54%, out of the 12,909 tickets that had a chance to participate during the shortened 9-day vote. In total it spent 3,907 DCR worth approx. $86K at November's billing rate of $21.92.
+The [treasury spend tx](https://dcrdata.decred.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) mined on Jan 3 had 24 outputs and was reported [last month](202212.md#governance) as making payments to contractors for (mostly) the November invoices, ranging from 5 DCR to 1,270 DCR. It was approved by 6,967 votes (all Yes) with voter turnout of 54%, out of the 12,909 tickets that had a chance to participate during the shortened 9-day vote. In total it spent 3,907 DCR worth approx. $86K at November's billing rate of $21.92.
 
 All spend transactions from the new treasury can be found [here](https://dcrdata.decred.org/treasury?txntype=tspend).
 
@@ -356,8 +356,6 @@ _Image: Mixed daily volume varied more than average._
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 147 nodes (+17), 261 channels (+28) with a total capacity of 106.1 DCR (+5.4), as of Feb 1. These stats vary depending on the LN node. For example, @karamble's node reported 163 nodes (+19), 347 channels (+35) and 159.7 DCR (+5.7) capacity on same Feb 1.
 
-{ _Add any interesting analysis or events in the network._ }
-
 
 ## Ecosystem
 
@@ -424,7 +422,7 @@ Please note that Decred Magazine generates much more content than [@decredprojec
 - [Bison Relay 0.1 news feed - connecting, creating and using markdown](https://www.youtube.com/watch?v=NuKVAp4fIBY) by @phoenixgreen
 - [Built-in payment system - Bison Relay](https://www.youtube.com/watch?v=aZvnd5BvEBs) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/built-in-payment-system-bison-relay/)
 - [Bison Relay - Manage content](https://www.youtube.com/watch?v=1gNc_DLCddc) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/bison-relay-manage-content/)
-- [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://www.youtube.com/watch?v=VYDPCbb5VhE) by CryptoSlate feat @jy-p
+- [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://www.youtube.com/watch?v=VYDPCbb5VhE) by CryptoSlate feat. @jy-p
 - [Bison Relay updates to version 0.1.3](https://www.youtube.com/watch?v=EWNW91_rp1w) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/bison-relay-updates-to-version-0-1-3/)
 
 **Audio:**
@@ -432,10 +430,10 @@ Please note that Decred Magazine generates much more content than [@decredprojec
 Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Spaces:
 
 - [2023: The year of the privacy coin?](https://twitter.com/i/spaces/1YqKDobzqoOxV) feat. Monero community members (also on [Anchor](https://anchor.fm/decred-magazine/episodes/2023-The-Year-of-the-Privacy-Coin-e1t4mst) + an edited version on [YouTube](https://www.youtube.com/watch?v=5ttufSLhsE0))
-- [Privacy tools for a sovereign age](https://twitter.com/i/spaces/1jMJgLyXXEyxL) feat. Decred and Monery community members ([Anchor](https://anchor.fm/decred-magazine/episodes/Privacy-Tools-for-a-Sovereign-Age---Decred-Twitter-Space-e1tf0g9))
-- [5 proposals up - general discussion](https://twitter.com/i/spaces/1YpKkgeoVqwKj) - speaking with proposal submitters and the community about the latest batch of proposals. ([Anchor](https://anchor.fm/decred-magazine/episodes/Decred-Twitter-Space-5-Proposals-Up-General-Discussion-hosted-by-WasPraxis-e1tpati))
+- [Privacy tools for a sovereign age](https://twitter.com/i/spaces/1jMJgLyXXEyxL) feat. Decred and Monero community members ([Anchor](https://anchor.fm/decred-magazine/episodes/Privacy-Tools-for-a-Sovereign-Age---Decred-Twitter-Space-e1tf0g9))
+- [5 proposals up - general discussion](https://twitter.com/i/spaces/1YpKkgeoVqwKj) - speaking with proposal submitters and the community about the latest batch of proposals ([Anchor](https://anchor.fm/decred-magazine/episodes/Decred-Twitter-Space-5-Proposals-Up-General-Discussion-hosted-by-WasPraxis-e1tpati))
 - [Why privacy is critical for a fully functional currency](https://twitter.com/i/spaces/1YqJDoDNrnzGV) feat. Firo Co-Founder [Reuben Yap](https://twitter.com/reubenyap) ([Anchor](https://anchor.fm/decred-magazine/episodes/Why-Privacy-is-Critical-for-a-Fully-Functional-Currency---Decred--Firo-Twitter-Space-e1u52o8))
-- [DCR proposals space](https://twitter.com/i/spaces/1jMKgLAlLXgGL) - second chat with proposal owners to discuss their aims and outcomes. ([Anchor](https://anchor.fm/decred-magazine/episodes/DCR-Proposals-Space-e1u9f9j))
+- [DCR proposals space](https://twitter.com/i/spaces/1jMKgLAlLXgGL) - second chat with proposal owners to discuss their aims and outcomes ([Anchor](https://anchor.fm/decred-magazine/episodes/DCR-Proposals-Space-e1u9f9j))
 
 **Art and fun:**
 
@@ -449,7 +447,6 @@ _Image: "Time for a Decred hot chocolate" by [@maitreludo](https://twitter.com/m
 **Other**:
 
 - Educational [thread](https://twitter.com/toddfmaki/status/1616283326490497025) by @toddfmaki about Decred Voting Service Providers
-- [@BisonDigest](https://twitter.com/BisonDigest) is a new Twitter account for reposting selected good content from Bison Relay.
 
 **Translations:**
 
@@ -524,7 +521,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: { davecgh, jholdstock }
-- title image: { OfficialCryptos }
+- writing, editing, publishing: bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred
+- reviews and feedback: davecgh, jholdstock
+- title image: OfficialCryptos
 - funding: Decred stakeholders
