--- a/journal/202301.md
+++ b/journal/202301.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – January 2023
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![](../img/202301.1.768.png)
 
-_Image: { "Title by @author. Description..." OR just "Description..." }_
+_Image: Decred Owl by @OfficialCryptos_
 
 Highlights for January:
 
@@ -79,7 +79,7 @@ Other changes:
 - Added [validation](https://github.com/decred/politeiagui/pull/2889) to all forms on Politeia, including error messages, and form submission control.
 - ~5 other fixes in the GUI and the pi-ui library.
 
-![](https://user-images.githubusercontent.com/22639213/209404782-5b954537-7ce2-4169-b95d-a744182c9b10.png) { upload 2884.1 }
+![](../img/202301.2.768.png)
 
 _Image: User account page in the Politeia GUI remake._
 
@@ -141,9 +141,7 @@ In progress:
 
 - [DigiByte](https://github.com/decred/dcrdex/pull/1993) (DGB) support.
 
-![](https://user-images.githubusercontent.com/6186350/213787303-ef69348c-ea26-46c0-a166-5893a1f73a2e.png) { upload 2057, crop, merge in 1 pic }
-
-![](https://user-images.githubusercontent.com/6186350/213787306-8a5f1cfc-3925-433d-b064-9a3ee6f1e032.png) { upload 2057, crop, merge in 1 pic }
+![](../img/202301.3.840.png)
 
 _Image: Improved fee estimation for tokens in DCRDEX._
 
@@ -247,7 +245,9 @@ Timestamply redesign arrived soon after the app has received some attention from
 
 The [proposal](https://proposals.decred.org/record/855a506) to fund the new version has been approved and it is awaiting deployment to [timestamp.decred.org](https://timestamp.decred.org/). Until then users can try the upcoming version on the [test website](https://dcrtimegui-redesign.netlify.app/). Be aware that the test website uses a different database and may not find hashes timestamped by the current version of the app.
 
-{ image candidate: nice screenshot of the remake }
+![](../img/202301.4.1000.png)
+
+_Image: Timestamply's new design._
 
 
 ### Other
@@ -278,6 +278,10 @@ All spend transactions from the new treasury can be found [here](https://dcrdata
 
 As of Jan 30, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 840K DCR ($19.4 million USD at $23.03).
 
+![](../img/202301.6.720.png)
+
+_Image: Decred Treasury monthly inflows and outflows._
+
 There were 8 proposals published on Politeia in January.
 
 - The [Decred Video Content 2023](https://proposals.decred.org/record/56a439a) proposal requested a budget of $45,600 to continue producing video content, including @DecredSociety's "Decred and the state of the market" livestream, @Exitus' News Updates, @karamble's video/gif animations, and @Tivra's Twitter Spaces. It was approved with 83% Yes votes and 55% turnout.
@@ -296,7 +300,7 @@ See Politeia Digest [issue 55](https://blockcommons.red/politeia-digest/issue055
 
 **Hashrate**: January's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~80 Ph/s and closed ~76 Ph/s, bottoming at 64 Ph/s and peaking at 93 Ph/s throughout the month.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Network_Daily_Hashrate.png) { upload }
+![](../img/202301.7.720.png)
 
 _Image: Decred hashrate._
 
@@ -304,23 +308,19 @@ Distribution of 81 Ph/s hashrate [reported](https://miningpoolstats.stream/decre
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Feb 1: Poolin 61%, F2Pool 31%, AntPool 4%, BTC.com 3%, CoinMine 0.4%.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Hashrate%20Distribution%20(Phs).png) { upload }
-
-_Image: Pool hashrate distribution._
-
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Daily_Hash_Dist.png) { upload }
+![](../img/202301.9.720.png)
 
 _Image: Historical pool hashrate distribution._
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 140-298 DCR, with 30-day [average](https://dcrstats.com/) at 212.5 DCR (-22.3).
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Staking_Daily_TicketPrice_DCR.png) { upload }
+![](../img/202301.10.720.png)
 
 _Image: Ticket price went wild._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 8.93-9.71 million DCR, meaning that 59.9-65.2% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Staking_Daily_TicketPoolVal_DCR.png) { upload }
+![](../img/202301.11.720.png)
 
 _Image: Drop and recovery of DCR locked in PoS._
 
@@ -332,13 +332,13 @@ Such a low ticket price has triggered very high ticket buying which has sent the
 
 Biggest gainers in January are vspd.99split.com (+419), dcrhive.com (+328) and vsp.stakeminer.com (+319).
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { upload }
+![](../img/202301.12.720.png)
 
 _Image: Distribution of tickets managed by VSPs._
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 187 dcrd nodes on Feb 1: v1.7.5 - 33%, v1.7.1 - 21%, v1.8.0 dev builds - 13%, v1.7.2 - 13%, v1.7.0 - 9%, v1.7.4 - 3%, other - 8%.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Daily_NodeDistribution.png) { upload }
+![](../img/202301.13.720.png)
 
 _Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. NOTE: Data until Jan 2023 was incomplete._
 
@@ -346,13 +346,9 @@ We have discovered that the node counts we have been reporting since [June 2022]
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 59.9-61.6%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 140-611K DCR.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Stakeshuffle_Daily_MixedUnspent_DCR.png) { upload }
+![](../img/202301.14.720.png)
 
 _Image: Mixed and unspent DCR has dropped slightly._
-
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Stakeshuffle_Daily_Volume_DCR.png) { upload }
-
-_Image: Mixed daily volume varied more than average._
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 147 nodes (+17), 261 channels (+28) with a total capacity of 106.1 DCR (+5.4), as of Feb 1. These stats vary depending on the LN node. For example, @karamble's node reported 163 nodes (+19), 347 channels (+35) and 159.7 DCR (+5.7) capacity on same Feb 1.
 
@@ -440,7 +436,7 @@ Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Sp
 - [Bison Relay TikTok promo](https://twitter.com/exitusdcr/status/1620123207251681280) feat. [@DajanaDcr](https://twitter.com/DajanaDcr)
 - [Decred strikes again](https://www.decredmagazine.com/decred-strikes-again/) by @OfficialCryptos
 
-{ hot choco pic }
+![](../img/202301.15.525.jpg)
 
 _Image: "Time for a Decred hot chocolate" by [@maitreludo](https://twitter.com/maitreludo/status/1608847709930393601)_
 
@@ -467,7 +463,7 @@ In January DCR was trading between USDT $18.30-$24.90 and BTC 0.00097-0.00116. T
 
 While not on [Decred Magazine](https://www.decredmagazine.com/author/applesaucesome/) recently, @Applesaucesome continues to post $DCR technical analysis and predictions [on Twitter](https://nitter.snopyta.org/applesaucesome1).
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/DEX_Monthly_Vol_USD.png) { upload }
+![](../img/202301.16.720.png)
 
 _Image: DCRDEX monthly volume in USD._
 
